snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__include__fst__extensions__far__script-impl.h.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/include/fst/extensions/far/script-impl.h",
    ),
    start_line: 1,
    end_line: 23,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "fst",
            ),
            start_line: 13,
            end_line: 21,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: Some(
                        "script",
                    ),
                    start_line: 14,
                    end_line: 20,
                    kind: Namespace,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 0,
                            closure_nargs: 0,
                            fn_nargs_sum: 0,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 0,
                            closure_nargs_min: 0,
                            fn_nargs_max: 0,
                            closure_nargs_max: 0,
                            total_functions: 0,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 0,
                            exit_sum: 0,
                            total_space_functions: 0,
                            exit_min: 0,
                            exit_max: 0,
                        },
                        cognitive: Stats {
                            structural: 0,
                            structural_sum: 0,
                            structural_min: 0,
                            structural_max: 0,
                            nesting: 0,
                            total_space_functions: 0,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 1.0,
                            cyclomatic: 1.0,
                            n: 1,
                            cyclomatic_max: 1.0,
                            cyclomatic_min: 1.0,
                        },
                        halstead: Stats {
                            u_operators: 4,
                            operators: 7,
                            u_operands: 6,
                            operands: 9,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 13,
                                end: 19,
                                unit: false,
                                sloc_min: 7,
                                sloc_max: 7,
                            },
                            ploc: Ploc {
                                lines: {
                                    13,
                                    15,
                                    17,
                                    19,
                                },
                                ploc_min: 4,
                                ploc_max: 4,
                            },
                            cloc: Cloc {
                                only_comment_lines: 0,
                                code_comment_lines: 0,
                                comment_line_end: None,
                                cloc_min: 0,
                                cloc_max: 0,
                            },
                            lloc: Lloc {
                                logical_lines: 2,
                                lloc_min: 2,
                                lloc_max: 2,
                            },
                            space_count: 1,
                            blank_min: 3,
                            blank_max: 3,
                        },
                        nom: Stats {
                            functions: 0,
                            closures: 0,
                            functions_sum: 0,
                            closures_sum: 0,
                            functions_min: 0,
                            functions_max: 0,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 16.0,
                            halstead_vocabulary: 10.0,
                            halstead_volume: 53.150849518197795,
                            cyclomatic: 1.0,
                            sloc: 7.0,
                            comments_percentage: 0.0,
                        },
                        abc: Stats {
                            assignments: 0.0,
                            assignments_sum: 0.0,
                            assignments_min: 0.0,
                            assignments_max: 0.0,
                            branches: 0.0,
                            branches_sum: 0.0,
                            branches_min: 0.0,
                            branches_max: 0.0,
                            conditions: 0.0,
                            conditions_sum: 0.0,
                            conditions_min: 0.0,
                            conditions_max: 0.0,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.0,
                            class_wmc: 0.0,
                            interface_wmc: 0.0,
                            class_wmc_sum: 0.0,
                            interface_wmc_sum: 0.0,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: false,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: false,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 0,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 0,
                    closure_nargs_max: 0,
                    total_functions: 0,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 0,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 0,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 2.0,
                    cyclomatic: 1.0,
                    n: 2,
                    cyclomatic_max: 1.0,
                    cyclomatic_min: 1.0,
                },
                halstead: Stats {
                    u_operators: 4,
                    operators: 8,
                    u_operands: 7,
                    operands: 10,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 12,
                        end: 20,
                        unit: false,
                        sloc_min: 7,
                        sloc_max: 7,
                    },
                    ploc: Ploc {
                        lines: {
                            13,
                            15,
                            12,
                            17,
                            20,
                            19,
                        },
                        ploc_min: 4,
                        ploc_max: 4,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 1,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 2,
                        lloc_min: 2,
                        lloc_max: 2,
                    },
                    space_count: 2,
                    blank_min: 3,
                    blank_max: 3,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 0,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 0,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 18.0,
                    halstead_vocabulary: 11.0,
                    halstead_volume: 62.26976913547135,
                    cyclomatic: 2.0,
                    sloc: 9.0,
                    comments_percentage: 0.1111111111111111,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 0,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 3.0,
            cyclomatic: 1.0,
            n: 3,
            cyclomatic_max: 1.0,
            cyclomatic_min: 1.0,
        },
        halstead: Stats {
            u_operators: 4,
            operators: 8,
            u_operands: 8,
            operands: 12,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 23,
                unit: true,
                sloc_min: 9,
                sloc_max: 9,
            },
            ploc: Ploc {
                lines: {
                    22,
                    13,
                    7,
                    20,
                    17,
                    11,
                    15,
                    12,
                    9,
                    6,
                    19,
                },
                ploc_min: 6,
                ploc_max: 6,
            },
            cloc: Cloc {
                only_comment_lines: 5,
                code_comment_lines: 3,
                comment_line_end: Some(
                    4,
                ),
                cloc_min: 1,
                cloc_max: 1,
            },
            lloc: Lloc {
                logical_lines: 2,
                lloc_min: 2,
                lloc_max: 2,
            },
            space_count: 3,
            blank_min: 3,
            blank_max: 3,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 20.0,
            halstead_vocabulary: 12.0,
            halstead_volume: 71.69925001442311,
            cyclomatic: 3.0,
            sloc: 23.0,
            comments_percentage: 0.34782608695652173,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
